fix(ui): Fix wrong height of file list in upload tracks dialog

--- a/ui/src/app/main/audio-book/audio-book-manage-files-dialog/audio-book-manage-files-dialog.component.sass
+++ b/ui/src/app/main/audio-book/audio-book-manage-files-dialog/audio-book-manage-files-dialog.component.sass
@@ -15,3 +15,6 @@ mat-action-row
   width: 100%
   height: 110px
   overflow: auto
+
+.max-height
+  height: 100%
